# Instagram_Leadership_Crew

Instagram_Reels/instagram_reel_crew/: .gitignore  README.md  pyproject.toml
Instagram_Reels/instagram_reel_crew/output/: final_content.json
Instagram_Reels/instagram_reel_crew/src/instagram_reel_crew/: main.py
Instagram_Reels/instagram_reel_crew/src/instagram_reel_crew/crews/planning_crew/: planning_crew.py
Instagram_Reels/instagram_reel_crew/src/instagram_reel_crew/crews/planning_crew/config/: agents.yaml  tasks.yaml
Instagram_Reels/instagram_reel_crew/src/instagram_reel_crew/crews/writing_crew/: writing_crew.py
Instagram_Reels/instagram_reel_crew/src/instagram_reel_crew/crews/writing_crew/config/: agents.yaml  tasks.yaml
Instagram_Reels/instagram_reel_crew/src/instagram_reel_crew/tools/: sqlserver_search_tool.py
