[project]
name = "instagram_reel_crew"
version = "0.1.0"
description = "instagram_reel_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0",
    "langtrace_python_sdk>=3.3"
]

[project.scripts]
kickoff = "instagram_reel_crew.main:kickoff"
plot = "instagram_reel_crew.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
